<resources>
    <string name="app_name">Popular Movies</string>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="favorites">Favorites</string>
    <string name="movie_title">Movie Title</string>
    <string name="trailer_title">Trailers</string>
    <string name="reviews_title">Reviews</string>
    <string name="release_date">Release Date</string>
    <string name="vote_average">Vote Average</string>
    <string name="synopsis">Synopsis</string>
    <string name="network_unavailable">Network Unavailable</string>
    <string name="switch_to_favorites">Network Unavailable. Switching to favorites.</string>
    <string name="switch_to_popular">No favorite movies selected. Default to popular.</string>
    <string name="pref_sort_method_key">SORT_METHOD</string>
    <string name="pref_sort_vote_avg_desc_key">SORT_VOTE_AVERAGE_DESC</string>
    <string name="pref_sort_pop_desc_key">SORT_POPULARITY_DESC</string>

    <string name="tmdb_sort_pop_desc">popular</string>
    <string name="tmdb_sort_vote_avg_desc">top_rated</string>
    <string name="tmdb_sort_fav_desc">favorites</string>
    <string name="parcel_movie">PARCEL_MOVIE</string>
    <string name="movies">MOVIES</string>
    <string name="poster_description">Movie Poster</string>
    <string name="favorite">favorite</string>
    <string name="unfavorite">unfavorite</string>

    <string name="show_trailers">Show trailers</string>
    <string name="show_reviews">Show Reviews</string>
    <string name="movie_id">MOVIE_ID</string>
</resources>
