<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MovieDetailsActivity"
    android:baselineAligned="false">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/details_scrollview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:paddingTop="20dp"
                android:contentDescription="@string/poster_description" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/favorite"
                android:padding="20dp"
                android:onClick="addToFavorites"
                android:id="@+id/favorite_button"/>

            <TextView
                android:id="@+id/title_heading"
                android:text="@string/movie_title"
                style="@style/header" />

            <TextView
                android:id="@+id/movie_title"
                style="@style/details" />

            <TextView
                android:id="@+id/release_date_heading"
                android:text="@string/release_date"
                style="@style/header" />

            <TextView
                android:id="@+id/release_date"
                style="@style/details" />

            <TextView
                android:id="@+id/vote_heading"
                android:text="@string/vote_average"
                style="@style/header" />

            <TextView
                android:id="@+id/vote_average"
                style="@style/details" />

            <TextView
                android:id="@+id/synopsis_header"
                android:text="@string/synopsis"
                style="@style/header" />

            <TextView
                android:id="@+id/synopsis"
                style="@style/details" />

            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/show_trailers"
                    android:padding="20dp"
                    android:onClick="showTrailers"
                    android:id="@+id/trailers_button"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/show_reviews"
                    android:padding="20dp"
                    android:onClick="showReviews"
                    android:id="@+id/reviews_button"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>